Fixed layout bugs.

--- a/src/pages/experiments/shaded-text.module.scss
+++ b/src/pages/experiments/shaded-text.module.scss
@@ -2,26 +2,29 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: stretch;
 }
 
 .title {
     font: 4rem 'new-spirit';
     text-align: center;
-    letter-spacing: 0.06em;
+    letter-spacing: 0.07em;
+    word-break: break-all;
+    white-space: pre-wrap;
 }
 
 .input {
-    position: absolute;
-    width: 100%;
     background: transparent;
     border: none;
     padding: 0px;
     outline: none;
-    color: white;
+    color: transparent;
+    position: absolute;
+    resize: none;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 
     &::selection {
         background: transparent;
@@ -29,10 +32,19 @@
 }
 
 .display {
-    pointer-events: none;
-    position: relative;
-    z-index: 2;
-    user-select: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: calc(100% - 2rem);
+    overflow: clip;
+
+    span {
+        position: relative;
+        z-index: 2;
+        pointer-events: none;
+        user-select: none;
+    }
 }
 
 .info-text {
